; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk-stm32h7.c_pll_frac_is_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk-stm32h7.c_pll_frac_is_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.stm32_pll_obj = type { %struct.stm32_fractional_divider }
%struct.stm32_fractional_divider = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_hw*)* @pll_frac_is_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pll_frac_is_enabled(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.stm32_pll_obj*, align 8
  %4 = alloca %struct.stm32_fractional_divider*, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %5 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %6 = call %struct.stm32_pll_obj* @to_pll(%struct.clk_hw* %5)
  store %struct.stm32_pll_obj* %6, %struct.stm32_pll_obj** %3, align 8
  %7 = load %struct.stm32_pll_obj*, %struct.stm32_pll_obj** %3, align 8
  %8 = getelementptr inbounds %struct.stm32_pll_obj, %struct.stm32_pll_obj* %7, i32 0, i32 0
  store %struct.stm32_fractional_divider* %8, %struct.stm32_fractional_divider** %4, align 8
  %9 = load %struct.stm32_fractional_divider*, %struct.stm32_fractional_divider** %4, align 8
  %10 = getelementptr inbounds %struct.stm32_fractional_divider, %struct.stm32_fractional_divider* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @readl(i32 %11)
  %13 = load %struct.stm32_fractional_divider*, %struct.stm32_fractional_divider** %4, align 8
  %14 = getelementptr inbounds %struct.stm32_fractional_divider, %struct.stm32_fractional_divider* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = ashr i32 %12, %15
  %17 = and i32 %16, 1
  ret i32 %17
}

declare dso_local %struct.stm32_pll_obj* @to_pll(%struct.clk_hw*) #1

declare dso_local i32 @readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
